--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -77,29 +77,36 @@
     "STATE_DONE": "Done",
     "SUPPORT": "Support",
     "OPPOSE": "Oppose",
-            "COMMENTS": "Comments",
-        "ADD_COMMENT": "Add Comment",
-        "COMMENT_PLACEHENTER": "Write your comment and press Enter to submit...",
-        "SUBMIT_COMMENT": "Submit",
-        "COLLABORATORS": "Collaborators",
-        "COLLABORATE": "Collaborate",
-        "COLLABORATION_REQUESTS": "Collaboration Requests",
-        "PENDING": "Pending",
-        "ACCEPT": "Accept",
-        "REJECT": "Reject",
-        "REMOVE": "Remove",
-        "JOINED": "Joined",
-        "REQUEST_COLLABORATION": "Request Collaboration",
-        "COLLABORATION_MESSAGE": "Message (optional)",
-        "COLLABORATION_MESSAGE_PLACEHOLDER": "Tell the creator why you want to collaborate...",
-        "SEND_REQUEST": "Send Request",
-        "NO_COLLABORATORS": "No collaborators yet",
-        "NO_REQUESTS": "No pending requests",
-        "ALREADY_COLLABORATING": "You are already collaborating or have a pending request",
-        "COLLABORATION_REQUEST_SENT": "Collaboration request sent successfully!",
-        "COLLABORATION_REQUEST_PENDING": "Collaboration request sent. Please wait for the project creator to review your request.",
-        "ERROR_SENDING_COLLABORATION_REQUEST": "Error sending collaboration request",
-        "CREATOR": "Creator"
+    "COMMENTS": "Comments",
+    "ADD_COMMENT": "Add Comment",
+    "COMMENT_PLACEHENTER": "Write your comment and press Enter to submit...",
+    "SUBMIT_COMMENT": "Submit",
+    "COLLABORATORS": "Collaborators",
+    "COLLABORATE": "Collaborate",
+    "COLLABORATION_REQUESTS": "Collaboration Requests",
+    "PENDING": "Pending",
+    "ACCEPT": "Accept",
+    "REJECT": "Reject",
+    "REMOVE": "Remove",
+    "JOINED": "Joined",
+    "REQUEST_COLLABORATION": "Request Collaboration",
+    "COLLABORATION_MESSAGE": "Message (optional)",
+    "COLLABORATION_MESSAGE_PLACEHOLDER": "Tell the creator why you want to collaborate...",
+    "SEND_REQUEST": "Send Request",
+    "NO_COLLABORATORS": "No collaborators yet",
+    "NO_REQUESTS": "No pending requests",
+    "ALREADY_COLLABORATING": "You are already collaborating or have a pending request",
+    "COLLABORATION_REQUEST_SENT": "Collaboration request sent successfully!",
+    "COLLABORATION_REQUEST_PENDING": "Collaboration request sent. Please wait for the project creator to review your request.",
+    "ERROR_SENDING_COLLABORATION_REQUEST": "Error sending collaboration request",
+    "CREATOR": "Creator",
+    "FILTER_PROJECTS": "Filter Projects",
+    "SELECT_SCOPE": "Select Scope",
+    "SCOPE_DESCRIPTION": "Choose a scope to filter projects by location and collaboration status",
+    "SCOPE_ALL": "All Projects",
+    "SCOPE_MY_PROJECTS": "My Projects",
+    "APPLY_FILTER": "Apply Filter",
+    "RESET_FILTER": "Reset Filter"
   },
   "SETTINGS": {
     "GENERAL": "General",
