--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -77,29 +77,36 @@
     "STATE_DONE": "Completado",
     "SUPPORT": "Apoyar",
     "OPPOSE": "Oponer",
-            "COMMENTS": "Comentarios",
-        "ADD_COMMENT": "Agregar Comentario",
-        "COMMENT_PLACEHENTER": "Escribe tu comentario y presiona Enter para enviar...",
-        "SUBMIT_COMMENT": "Enviar",
-        "COLLABORATORS": "Colaboradores",
-        "COLLABORATE": "Colaborar",
-        "COLLABORATION_REQUESTS": "Solicitudes de Colaboración",
-        "PENDING": "Pendiente",
-        "ACCEPT": "Aceptar",
-        "REJECT": "Rechazar",
-        "REMOVE": "Remover",
-        "JOINED": "Se Unió",
-        "REQUEST_COLLABORATION": "Solicitar Colaboración",
-        "COLLABORATION_MESSAGE": "Mensaje (opcional)",
-        "COLLABORATION_MESSAGE_PLACEHOLDER": "Dile al creador por qué quieres colaborar...",
-        "SEND_REQUEST": "Enviar Solicitud",
-        "NO_COLLABORATORS": "Aún no hay colaboradores",
-        "NO_REQUESTS": "No hay solicitudes pendientes",
-        "ALREADY_COLLABORATING": "Ya estás colaborando o tienes una solicitud pendiente",
-        "COLLABORATION_REQUEST_SENT": "Solicitud de colaboración enviada exitosamente",
-        "COLLABORATION_REQUEST_PENDING": "Solicitud de colaboración enviada. Por favor espera a que el creador del proyecto revise tu solicitud.",
-        "ERROR_SENDING_COLLABORATION_REQUEST": "Error al enviar solicitud de colaboración",
-        "CREATOR": "Creador"
+    "COMMENTS": "Comentarios",
+    "ADD_COMMENT": "Agregar Comentario",
+    "COMMENT_PLACEHENTER": "Escribe tu comentario y presiona Enter para enviar...",
+    "SUBMIT_COMMENT": "Enviar",
+    "COLLABORATORS": "Colaboradores",
+    "COLLABORATE": "Colaborar",
+    "COLLABORATION_REQUESTS": "Solicitudes de Colaboración",
+    "PENDING": "Pendiente",
+    "ACCEPT": "Aceptar",
+    "REJECT": "Rechazar",
+    "REMOVE": "Remover",
+    "JOINED": "Se Unió",
+    "REQUEST_COLLABORATION": "Solicitar Colaboración",
+    "COLLABORATION_MESSAGE": "Mensaje (opcional)",
+    "COLLABORATION_MESSAGE_PLACEHOLDER": "Dile al creador por qué quieres colaborar...",
+    "SEND_REQUEST": "Enviar Solicitud",
+    "NO_COLLABORATORS": "Aún no hay colaboradores",
+    "NO_REQUESTS": "No hay solicitudes pendientes",
+    "ALREADY_COLLABORATING": "Ya estás colaborando o tienes una solicitud pendiente",
+    "COLLABORATION_REQUEST_SENT": "Solicitud de colaboración enviada exitosamente",
+    "COLLABORATION_REQUEST_PENDING": "Solicitud de colaboración enviada. Por favor espera a que el creador del proyecto revise tu solicitud.",
+    "ERROR_SENDING_COLLABORATION_REQUEST": "Error al enviar solicitud de colaboración",
+    "CREATOR": "Creador",
+    "FILTER_PROJECTS": "Filtrar Proyectos",
+    "SELECT_SCOPE": "Seleccionar Alcance",
+    "SCOPE_DESCRIPTION": "Elige un alcance para filtrar proyectos por ubicación y estado de colaboración",
+    "SCOPE_ALL": "Todos los Proyectos",
+    "SCOPE_MY_PROJECTS": "Mis Proyectos",
+    "APPLY_FILTER": "Aplicar Filtro",
+    "RESET_FILTER": "Restablecer Filtro"
   },
   "SETTINGS": {
     "GENERAL": "General",
