--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -50,7 +50,8 @@
     "LOCATION_ACCESSING": "Accediendo a ubicación...",
     "LOCATION_SUCCESS": "Ubicación accedida exitosamente",
     "LOCATION_ERROR": "No se pudo acceder a la ubicación",
-    "LOCATION_PERMISSION_DENIED": "Permiso de ubicación denegado"
+    "LOCATION_PERMISSION_DENIED": "Permiso de ubicación denegado",
+    "LOCATION_CLICK_TO_ENABLE": "Haz clic para habilitar ubicación"
   },
   "HOME": {
     "WELCOME": "Bienvenido a MiApp20",
