--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -98,6 +98,7 @@
     "NO_REQUESTS": "No pending requests",
     "ALREADY_COLLABORATING": "You are already collaborating or have a pending request",
     "COLLABORATION_REQUEST_SENT": "Collaboration request sent successfully!",
+    "USER_PROJECT": "Your Project",
     "COLLABORATION_REQUEST_PENDING": "Collaboration request sent. Please wait for the project creator to review your request.",
     "ERROR_SENDING_COLLABORATION_REQUEST": "Error sending collaboration request",
     "CREATOR": "Creator",
