--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -98,6 +98,7 @@
     "NO_REQUESTS": "No hay solicitudes pendientes",
     "ALREADY_COLLABORATING": "Ya estás colaborando o tienes una solicitud pendiente",
     "COLLABORATION_REQUEST_SENT": "Solicitud de colaboración enviada exitosamente",
+    "USER_PROJECT": "Tu Proyecto",
     "COLLABORATION_REQUEST_PENDING": "Solicitud de colaboración enviada. Por favor espera a que el creador del proyecto revise tu solicitud.",
     "ERROR_SENDING_COLLABORATION_REQUEST": "Error al enviar solicitud de colaboración",
     "CREATOR": "Creador",
