--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -140,6 +140,9 @@
     "AUTH_REQUIRED_MESSAGE": "Please log in to edit your profile",
     "LOCATION": "Location",
     "LOCATION_DETAILS": "Location Details",
+    "CITY": "City",
+    "STATE": "State",
+    "COUNTRY": "Country",
     "LATITUDE": "Latitude",
     "LONGITUDE": "Longitude",
     "ACCURACY": "Accuracy",
