--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -140,6 +140,9 @@
     "AUTH_REQUIRED_MESSAGE": "Por favor inicia sesión para editar tu perfil",
     "LOCATION": "Ubicación",
     "LOCATION_DETAILS": "Detalles de Ubicación",
+    "CITY": "Ciudad",
+    "STATE": "Estado",
+    "COUNTRY": "País",
     "LATITUDE": "Latitud",
     "LONGITUDE": "Longitud",
     "ACCURACY": "Precisión",
