--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -81,6 +81,7 @@
     "OPPOSE": "Oppose",
     "VERIFY": "Verify",
     "FOLLOW": "Follow",
+    "IMPLEMENTATION_PROGRESS": "Progress",
     "COMMENTS": "Comments",
     "ADD_COMMENT": "Add Comment",
     "COMMENT_PLACEHENTER": "Write your comment and press Enter to submit...",
