--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -81,6 +81,7 @@
     "OPPOSE": "Oponer",
     "VERIFY": "Verificar",
     "FOLLOW": "Seguir",
+    "IMPLEMENTATION_PROGRESS": "Progreso",
     "COMMENTS": "Comentarios",
     "ADD_COMMENT": "Agregar Comentario",
     "COMMENT_PLACEHENTER": "Escribe tu comentario y presiona Enter para enviar...",
