--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -153,7 +153,10 @@
     "LAST_UPDATED": "Last Updated",
     "LOADING": "Loading profile...",
     "ERROR_TITLE": "Profile Not Found",
-    "ERROR_MESSAGE": "The profile you're looking for doesn't exist or you don't have access to it."
+    "ERROR_MESSAGE": "The profile you're looking for doesn't exist or you don't have access to it.",
+    "USER_PROJECTS": "User Projects",
+    "ROLE": "Role",
+    "LOADING_PROJECTS": "Loading projects..."
   },
   "NEW_ITEM": {
     "CREATE_NEW": "Propose",
