--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -106,6 +106,11 @@
     "COLLABORATION_REQUEST_PENDING": "Collaboration request sent. Please wait for the project creator to review your request.",
     "ERROR_SENDING_COLLABORATION_REQUEST": "Error sending collaboration request",
     "CREATOR": "Creator",
+    "LOCATION_DETAILS": "Location Details",
+    "FULL_ADDRESS": "Full Address",
+    "CITY": "City",
+    "COUNTRY": "Country",
+    "COORDINATES": "Coordinates",
     "FILTER_PROJECTS": "Filter Projects",
     "SEARCH_PROJECTS": "Search Projects",
     "SEARCH_PLACEHOLDER": "Search projects by name...",
