--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -106,6 +106,11 @@
     "COLLABORATION_REQUEST_PENDING": "Solicitud de colaboración enviada. Por favor espera a que el creador del proyecto revise tu solicitud.",
     "ERROR_SENDING_COLLABORATION_REQUEST": "Error al enviar solicitud de colaboración",
     "CREATOR": "Creador",
+    "LOCATION_DETAILS": "Detalles de Ubicación",
+    "FULL_ADDRESS": "Dirección Completa",
+    "CITY": "Ciudad",
+    "COUNTRY": "País",
+    "COORDINATES": "Coordenadas",
     "FILTER_PROJECTS": "Filtrar Proyectos",
     "SEARCH_PROJECTS": "Buscar Proyectos",
     "SEARCH_PLACEHOLDER": "Buscar proyectos por nombre...",
