--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -26,7 +26,9 @@
     "INFO": "Information",
     "PROJECT_NOT_FOUND": "Project not found",
     "OPTIONAL": "Optional",
-    "ACCEPT": "Accept"
+    "ACCEPT": "Accept",
+    "DISMISS": "Dismiss",
+    "UPDATE": "Update"
   },
   "AUTH": {
     "LOGIN_TITLE": "Welcome Back",
@@ -111,6 +113,10 @@
     "CITY": "City",
     "COUNTRY": "Country",
     "COORDINATES": "Coordinates",
+    "LOCATION_CHANGE_TITLE": "Location Changed",
+    "LOCATION_CHANGE_MESSAGE": "We detected that you're in a different city. Would you like to update your location?",
+    "CURRENT_LOCATION": "Current Location",
+    "SAVED_LOCATION": "Saved Location",
     "FILTER_PROJECTS": "Filter Projects",
     "SEARCH_PROJECTS": "Search Projects",
     "SEARCH_PLACEHOLDER": "Search projects by name...",
