--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -183,6 +183,14 @@
     "SCOPE_LOCAL": "Local - Neighbourhood/Community",
     "SCOPE_NATIONAL": "National - Country level",
     "SCOPE_GLOBAL": "Global - International level",
+    "LOCATION": "Location",
+    "CITY": "City",
+    "COUNTRY": "Country",
+    "LOADING_LOCATION": "Loading location...",
+    "LOCATION_NOT_AVAILABLE": "Location not available",
+    "ENTER_CITY": "Enter city name",
+    "ENTER_COUNTRY": "Enter country name",
+    "SEARCHING_PLACES": "Searching places...",
     "MEDIA": "Media",
     "MEDIA_PLACEHOLDER": "Add a photo or video to your project",
     "ADD_MEDIA": "Add Media",
