--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -183,6 +183,14 @@
     "SCOPE_LOCAL": "Local - Vecindario/Comunidad",
     "SCOPE_NATIONAL": "Nacional - Nivel País",
     "SCOPE_GLOBAL": "Global - Nivel Internacional",
+    "LOCATION": "Ubicación",
+    "CITY": "Ciudad",
+    "COUNTRY": "País",
+    "LOADING_LOCATION": "Cargando ubicación...",
+    "LOCATION_NOT_AVAILABLE": "Ubicación no disponible",
+    "ENTER_CITY": "Ingresa nombre de la ciudad",
+    "ENTER_COUNTRY": "Ingresa nombre del país",
+    "SEARCHING_PLACES": "Buscando lugares...",
     "MEDIA": "Multimedia",
     "MEDIA_PLACEHOLDER": "Agrega una foto o video a tu proyecto",
     "ADD_MEDIA": "Agregar Multimedia",
