--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -117,6 +117,11 @@
     "LOCATION_CHANGE_MESSAGE": "We detected that you're in a different city. Would you like to update your location?",
     "CURRENT_LOCATION": "Current Location",
     "SAVED_LOCATION": "Saved Location",
+    "CHANGE_ADDRESS": "Change Address",
+    "SEARCH_NEW_ADDRESS": "Search for a new address...",
+    "NO_LOCATION": "No Location Set",
+    "NO_LOCATION_MESSAGE": "You haven't set your location yet. Enable location access to get started.",
+    "ENABLE_LOCATION": "Enable Location",
     "FILTER_PROJECTS": "Filter Projects",
     "SEARCH_PROJECTS": "Search Projects",
     "SEARCH_PLACEHOLDER": "Search projects by name...",
