--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -117,6 +117,11 @@
     "LOCATION_CHANGE_MESSAGE": "Detectamos que estás en una ciudad diferente. ¿Te gustaría actualizar tu ubicación?",
     "CURRENT_LOCATION": "Ubicación Actual",
     "SAVED_LOCATION": "Ubicación Guardada",
+    "CHANGE_ADDRESS": "Cambiar Dirección",
+    "SEARCH_NEW_ADDRESS": "Buscar una nueva dirección...",
+    "NO_LOCATION": "Sin Ubicación",
+    "NO_LOCATION_MESSAGE": "Aún no has configurado tu ubicación. Habilita el acceso a la ubicación para comenzar.",
+    "ENABLE_LOCATION": "Habilitar Ubicación",
     "FILTER_PROJECTS": "Filtrar Proyectos",
     "SEARCH_PROJECTS": "Buscar Proyectos",
     "SEARCH_PLACEHOLDER": "Buscar proyectos por nombre...",
