--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -113,11 +113,12 @@
     "CITY": "Ciudad",
     "COUNTRY": "País",
     "COORDINATES": "Coordenadas",
-    "LOCATION_CHANGE_TITLE": "Ubicación Cambiada",
+    "LOCATION_CHANGE_TITLE": "Tu ubicación cambió",
     "LOCATION_CHANGE_MESSAGE": "Detectamos que estás en una ciudad diferente. ¿Te gustaría actualizar tu ubicación?",
     "CURRENT_LOCATION": "Ubicación Actual",
     "SAVED_LOCATION": "Ubicación Guardada",
-    "CHANGE_ADDRESS": "Cambiar Dirección",
+    "CHANGE_ADDRESS": "Cambiar ubicación",
+    "CHOOSE_LOCATION": "Elegir ubicación",
     "SEARCH_NEW_ADDRESS": "Buscar una nueva dirección...",
     "NO_LOCATION": "Sin Ubicación",
     "NO_LOCATION_MESSAGE": "Aún no has configurado tu ubicación. Habilita el acceso a la ubicación para comenzar.",
