--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -113,11 +113,12 @@
     "CITY": "City",
     "COUNTRY": "Country",
     "COORDINATES": "Coordinates",
-    "LOCATION_CHANGE_TITLE": "Location Changed",
+    "LOCATION_CHANGE_TITLE": "Your location changed",
     "LOCATION_CHANGE_MESSAGE": "We detected that you're in a different city. Would you like to update your location?",
     "CURRENT_LOCATION": "Current Location",
     "SAVED_LOCATION": "Saved Location",
-    "CHANGE_ADDRESS": "Change Address",
+    "CHANGE_ADDRESS": "Change location",
+    "CHOOSE_LOCATION": "Choose location",
     "SEARCH_NEW_ADDRESS": "Search for a new address...",
     "NO_LOCATION": "No Location Set",
     "NO_LOCATION_MESSAGE": "You haven't set your location yet. Enable location access to get started.",
