Grupal - Small Group Collaboration

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -184,10 +184,10 @@
     "NEED_PLACEHOLDER": "Add requirement",
     "SCOPE": "Scope",
     "SCOPE_PLACEHOLDER": "Select the scope",
-    "SCOPE_GRUPAL": "Grupal - Small Group Collaboration",
-    "SCOPE_LOCAL": "Local - Neighbourhood/Community",
-    "SCOPE_NATIONAL": "National - Country level",
-    "SCOPE_GLOBAL": "Global - International level",
+    "SCOPE_GRUPAL": "Group collaboration",
+    "SCOPE_LOCAL": "Local",
+    "SCOPE_NATIONAL": "National",
+    "SCOPE_GLOBAL": "International",
     "LOCATION": "Location",
     "CITY": "City",
     "COUNTRY": "Country",
