--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -184,10 +184,10 @@
     "NEED_PLACEHOLDER": "Agregar requerimiento",
     "SCOPE": "Alcance",
     "SCOPE_PLACEHOLDER": "Seleccionar alcance",
-    "SCOPE_GRUPAL": "Grupal - Colaboración de Grupo Pequeño",
-    "SCOPE_LOCAL": "Local - Vecindario/Comunidad",
-    "SCOPE_NATIONAL": "Nacional - Nivel País",
-    "SCOPE_GLOBAL": "Global - Nivel Internacional",
+    "SCOPE_GRUPAL": "Colaboración grupal",
+    "SCOPE_LOCAL": "Local",
+    "SCOPE_NATIONAL": "Nacional",
+    "SCOPE_GLOBAL": "Internacional",
     "LOCATION": "Ubicación",
     "CITY": "Ciudad",
     "COUNTRY": "País",
