--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -133,7 +133,9 @@
     "RESET_FILTER": "Restablecer Filtro",
     "NO_FILTERED_PROJECTS": "No Se Encontraron Proyectos",
     "NO_FILTERED_PROJECTS_MESSAGE": "Ningún proyecto coincide con tu filtro actual. Intenta ajustar el filtro o crear un nuevo proyecto.",
-    "CREATE_NEW_PROJECT": "Crear Nuevo Proyecto"
+    "CREATE_NEW_PROJECT": "Crear Nuevo Proyecto",
+    "SHOW_MORE": "Mostrar más",
+    "SHOW_LESS": "Mostrar menos"
   },
   "SETTINGS": {
     "GENERAL": "General",
