--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -79,7 +79,7 @@
     "STATE_IMPLEMENTING": "Implementing",
     "STATE_DONE": "Done",
     "SUPPORT": "Support",
-    "OPPOSE": "Oppose",
+    "OPPOSE": "Opposition",
     "VERIFY": "Verify",
     "FOLLOW": "Follow",
     "IMPLEMENTATION_PROGRESS": "Progress",
