--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -78,8 +78,8 @@
     "STATE_BUILDING": "Construyendo",
     "STATE_IMPLEMENTING": "Implementando",
     "STATE_DONE": "Completado",
-    "SUPPORT": "Apoyar",
-    "OPPOSE": "Oponer",
+    "SUPPORT": "Apoyo",
+    "OPPOSE": "Oposición",
     "VERIFY": "Verificar",
     "FOLLOW": "Seguir",
     "IMPLEMENTATION_PROGRESS": "Progreso",
