--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -110,6 +110,7 @@
     "LOCATION_DETAILS": "Location Details",
     "FULL_ADDRESS": "Full Address",
     "CITY": "City",
+    "STATE": "State",
     "COUNTRY": "Country",
     "COORDINATES": "Coordinates",
     "LOCATION_CHANGE_TITLE": "Your location changed",
@@ -208,6 +209,7 @@
     "LOADING_LOCATION": "Loading location...",
     "LOCATION_NOT_AVAILABLE": "Location not available",
     "ENTER_CITY": "Enter city name",
+    "ENTER_STATE": "Enter state/province name",
     "ENTER_COUNTRY": "Enter country name",
     "SEARCHING_PLACES": "Searching places...",
     "MEDIA": "Media",
