--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -110,6 +110,7 @@
     "LOCATION_DETAILS": "Detalles de Ubicación",
     "FULL_ADDRESS": "Dirección Completa",
     "CITY": "Ciudad",
+    "STATE": "Estado/Provincia",
     "COUNTRY": "País",
     "COORDINATES": "Coordenadas",
     "LOCATION_CHANGE_TITLE": "Tu ubicación cambió",
@@ -208,6 +209,7 @@
     "LOADING_LOCATION": "Cargando ubicación...",
     "LOCATION_NOT_AVAILABLE": "Ubicación no disponible",
     "ENTER_CITY": "Ingresa nombre de la ciudad",
+    "ENTER_STATE": "Ingresa nombre del estado/provincia",
     "ENTER_COUNTRY": "Ingresa nombre del país",
     "SEARCHING_PLACES": "Buscando lugares...",
     "MEDIA": "Multimedia",
