--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -71,7 +71,9 @@
     "NO": "No",
     "NO_PROJECTS": "No Projects Yet",
     "NO_PROJECTS_MESSAGE": "Be the first to create a project and start collaborating with others!",
+    "NO_MORE_PROJECTS": "No more projects",
     "CREATE_FIRST_PROJECT": "Create First Project",
+    "CREATE_PROJECT": "Create Project",
     "WHAT_WE_NEED": "What We Need",
     "NEED_PENDING": "Pending",
     "NEED_OBTAINED": "Obtained",
