--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -71,7 +71,9 @@
     "NO": "No",
     "NO_PROJECTS": "Aún No Hay Proyectos",
     "NO_PROJECTS_MESSAGE": "¡Sé el primero en crear un proyecto y comenzar a colaborar con otros!",
+    "NO_MORE_PROJECTS": "No hay más proyectos",
     "CREATE_FIRST_PROJECT": "Crear Primer Proyecto",
+    "CREATE_PROJECT": "Crear Proyecto",
     "WHAT_WE_NEED": "Qué Necesitamos",
     "NEED_PENDING": "Pendiente",
     "NEED_OBTAINED": "Obtenido",
