--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -136,6 +136,7 @@
     "RESET_FILTER": "Reset Filter",
     "NO_FILTERED_PROJECTS": "No Projects Found",
     "NO_FILTERED_PROJECTS_MESSAGE": "No projects match your current filter. Try adjusting the filter or create a new project.",
+    "TRY_DIFFERENT_FILTER": "Try a different filter combination to find projects.",
     "CREATE_NEW_PROJECT": "Create New Project",
     "SHOW_MORE": "Show more",
     "SHOW_LESS": "Show less"
