--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -16,7 +16,7 @@
     "ADD": "Agregar",
     "SEARCH": "Buscar",
     "CLOSE": "Cerrar",
-    "BACK": "Atrás",
+    "BACK": "Volver",
     "NEXT": "Siguiente",
     "PREVIOUS": "Anterior",
     "LOADING": "Cargando...",
