--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -154,6 +154,7 @@
   "SETTINGS": {
     "GENERAL": "General",
     "LANGUAGE": "Idioma",
+    "SELECT_LANGUAGE": "Seleccionar Idioma",
     "THEME": "Tema",
     "LIGHT_THEME": "Tema Claro",
     "DARK_THEME": "Tema Oscuro",
